--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ aside {
 
 .image-grid img {
     width: 100%;
+    height: 250px;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
