--- a/style.css
+++ b/style.css
@@ -68,8 +68,10 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: rgba(68, 68, 68, 0.85);
-    border-radius: 5px;
+    background-color: rgba(237, 186, 88, 0.80); 
+    color: #000; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+    border-radius: 5px; 
 }
 
 /* Main content styling */
